--- a/index.org
+++ b/index.org
@@ -73,6 +73,32 @@ This project is my collection of notes and customised software tools for data ma
       dir.create("inst/extdata", recursive=T)
       write.csv(civst_gend_sector, "inst/extdata/civst_gend_sector.csv", row.names = F)
   
+  <p></p>
+  
+  That is fine and good, we can use the case weights option to include number of cases but sometimes we want to use one row per person.
+  In the next chunk of code I;ll reformat the data, and also add another fictitious variable called income and contrive an example where a certain group earns less based on their activity sector.
+  
+  #### Code:
+      df <- as.data.frame(matrix(NA, nrow = 0, ncol = 3))
+      for(i in 1:nrow(civst_gend_sector))
+          {
+          #    i <- 1
+              n <- civst_gend_sector$number_of_cases[i]
+              if(n == 0) next
+              for(j in 1:n)
+                  {
+                    df <- rbind(df, civst_gend_sector[i,1:3])              
+                  }
+       
+          }
+  
+      df$income  <- rnorm(nrow(df), 1000,200)
+      # Let us say secondary men earn less
+      df$income[df$gender == "male" & df$activity == "secondary"]  <- df$income[df$gender == "male" & df$activity == "secondary"] - 500
+      str(df)
+      # save this for use later
+      write.csv(df, "inst/extdata/civst_gend_sector_full.csv", row.names = F)
+  
   #### Motivating reason for using these data
   Classification and Regression Tree models (also referred to as Decision Trees) are one of the building blocks of data mining and a great tool for Exploratory Data Analysis.
   
@@ -418,6 +444,30 @@ So I thought what's the other 10?  Here's a few contenders for my work:
       df <- read.csv(fpath)
       # clean
       str(df)
+
+#+end_src
+
+*** 2013-10-25-dm blog document-first-ask-questions-later
+#+name:document-first-ask-questions-later-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-25-document-first-ask-questions-later.md :exports none :eval no :padline no
+  ---
+  name: document-first-ask-questions-later
+  layout: post
+  title: document-first-ask-questions-later
+  date: 2013-10-25
+  categories:
+  - research methods
+  - Data Documentation
+  ---
+  
+  This post is just a short note about something I'm thinking of calling "documentation-driven development".
+  It is based on the concept of ["test-driven development"](http://en.wikipedia.org/wiki/Test-driven_development), and more recently:
+  
+  - ["test-driven analysis"](http://lamages.blogspot.in/2013/04/test-driven-analysis.html) 
+  - or even ["Evidence-based Data Analysis"](http://simplystatistics.org/2013/09/05/implementing-evidence-based-data-analysis-treading-a-new-path-for-reproducible-research-part-3/)).
+  - It is also a kind of a critique on the paradigm suggested by the BCCVL statement on ["Just-In-Time metadata"](http://bccvl.org.au/blog/2013/08/20/just-in-time-metadata/). 
+  
+  Anyway, it is a small thing but hopefully big things will grow.
 
 #+end_src
 
@@ -1016,20 +1066,6 @@ So I thought what's the other 10?  Here's a few contenders for my work:
   # load
   fpath <- system.file(file.path("extdata", "civst_gend_sector.csv"), package = "disentangle")
   civst_gend_sector <- read.csv(fpath)
-    df <- as.data.frame(matrix(NA, nrow = 0, ncol = 3))
-    for(i in 1:nrow(civst_gend_sector))
-        {
-        #    i <- 1
-            n <- civst_gend_sector$number_of_cases[i]
-            if(n == 0) next
-            for(j in 1:n)
-                {
-                  df <- rbind(df, civst_gend_sector[i,1:3])              
-                }
-     
-        }
-    # TODO save this for use later
-    write.csv(df, "inst/extdata/civst_gend_sector_full.csv", row.names = F)
   analyte  <- df
   analyte$random <- rnorm(nrow(analyte), 0 , 1)
   #analyte
@@ -1652,8 +1688,8 @@ source("tests/test-tree.chisq.r")
 *** rpart-deviance-explained-test
 #+name:rpart_deviance_explained-test
 #+begin_src R :session *R* :tangle no :exports reports :eval no
-  ################################################################
-  # name:rpart_deviance_explained-test
+    ################################################################
+    # name:rpart_deviance_explained-test
   
   
   
@@ -1664,15 +1700,14 @@ source("tests/test-tree.chisq.r")
     require(devtools)
     install_github("disentangle", "ivanhanigan")
     require(disentangle)
+
     # load
     fpath <- system.file(file.path("extdata", "civst_gend_sector_full.csv"), package = "disentangle")
     fpath
     analyte  <- read.csv(fpath)
     str(analyte)
-    analyte$income  <- rnorm(nrow(analyte), 1000,200)
-    # secondary men earn less
-    analyte$income[analyte$gender == "male" & analyte$activity == "secondary"]  <- analyte$income[analyte$gender == "male" & analyte$activity == "secondary"] - 500
-    str(analyte)
+
+    # do
     fit  <- rpart(income ~ ., data = analyte)
     print(fit)
     par(xpd=T)
